--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
+html {
+  font-size: 18px;
+}
+
 .fullpage {
-  display: block;
-  width: 100vmax;
-  height: 100vmax;
+  height: 100vh;
+  width: 100vw;
+  padding: 20%;
 }
