first animation shot

--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,17 @@ html {
   margin: 10px auto;
   padding: 50px;
 }
+
+.source {
+  animation: fadeIn 5s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
