--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,14 @@
   text-align: center;
 }
 
-.custom {
+[id="-1:-1@-1"] {
+  line-height: 0.5;
+}
+
+[id="-1:-1@-2"],
+[id="-1:-1@-1"] pre {
   background-color: transparent;
+  line-height: 1.4;
   text-align: left;
   display: inline-block;
   margin: 10px auto;
